--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -281,93 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>News</th>\n",
-       "      <th>Obama, Barack</th>\n",
-       "      <th>Volcker, Paul A</th>\n",
-       "      <th>Banks and Banking</th>\n",
-       "      <th>Economic Recovery Advisory Board</th>\n",
-       "      <th>United States</th>\n",
-       "      <th>Helmand Province (Afghanistan)</th>\n",
-       "      <th>Taliban</th>\n",
-       "      <th>United States Marine Corps</th>\n",
-       "      <th>Afghanistan War (2001- )</th>\n",
-       "      <th>United States Defense and Military Forces</th>\n",
-       "      <th>Afghanistan</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   News  Obama, Barack  Volcker, Paul A  Banks and Banking  \\\n",
-       "1     2              2                2                  1   \n",
-       "\n",
-       "   Economic Recovery Advisory Board  United States  \\\n",
-       "1                                 1              1   \n",
-       "\n",
-       "   Helmand Province (Afghanistan)  Taliban  United States Marine Corps  \\\n",
-       "1                               1        1                           1   \n",
-       "\n",
-       "   Afghanistan War (2001- )  United States Defense and Military Forces  \\\n",
-       "1                         1                                          1   \n",
-       "\n",
-       "   Afghanistan  \n",
-       "1            1  "
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = (pd.DataFrame(sorted_list))\n",
-    "data.sort_values(by=[1])\n",
-    "data.drop([0],inplace=True,axis=1)\n",
-    "datat=data.transpose()\n",
-    "datat.columns=col\n",
-    "datat"
+    "# data = (pd.DataFrame(sorted_list))\n",
+    "# data.sort_values(by=[1])\n",
+    "# data.drop([0],inplace=True,axis=1)\n",
+    "# datat=data.transpose()\n",
+    "# datat.columns=col\n",
+    "# datat"
    ]
   },
   {
